@@ -11,7 +11,6 @@ object DigIt_Profiles: TDigIt_Profiles
   ClientWidth = 550
   DesignTimePPI = 120
   Position = poScreenCenter
-  LCLVersion = '4.99.0.0'
   OnShow = FormShow
   object panelButtons: TBCPanel
     Left = 0
@@ -123,13 +122,13 @@ object DigIt_Profiles: TDigIt_Profiles
           AutoSize = True
           Caption = 'Title'
           MinWidth = 100
-          Width = 100
+          Width = 49
         end      
         item
           AutoSize = True
           Caption = 'Source'
           MinWidth = 100
-          Width = 100
+          Width = 65
         end>
       HideSelection = False
       IconOptions.Arrangement = iaLeft
@@ -173,6 +172,7 @@ object DigIt_Profiles: TDigIt_Profiles
       Enabled = False
       Images = imgList
       ImageIndex = 3
+      OnClick = btDelAllClick
     end
     object btFirst: TSpeedButton
       Left = 392
